[package]
name = "rust-bdd"
version = "0.1.0"
authors = ["dkijania <dariusz.kijania@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
thiserror = "1.0"
serde_json = "1.0"
serde = { version="=1.0", features = ["derive"] }
cfg-if = "1.0"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros", "time"] }
chrono = "0.4.19"
cucumber_rust = { git = "https://github.com/bbqsrc/cucumber-rust", branch = "main" }
hmac = "0.10.1"
sha2 = "0.9.3"
base64 = "0.13.0"
indexmap = "1.6.2"

[dependencies.reqwest]
version = "0.10.10"
default-features = false
features = ["blocking","rustls-tls", "json"]

[dev-dependencies]
async-trait = "0.1.48"
simple_logger = "1.11.0"
log = "0.4"